[package]
name = "model-meter"
version = "0.1.0"
edition = "2024"
description = "Model-agnostic CLI for tracking AI tool usage across providers like Codex, Cursor, Claude, and Windsurf."
license = "MIT"
repository = "https://github.com/bharadwaj-pendyala/model-meter"
homepage = "https://github.com/bharadwaj-pendyala/model-meter"
readme = "README.md"
keywords = ["codex", "cursor", "claude", "windsurf", "usage"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
